# obj_detector

./: CMakeLists.txt  README.md  detection_cat.md  obj_detector.doctor.toml  obj_detector.md  package.xml
include/detection_cat/: DetectionCatNode_node.hpp
include/obj_detector/: ConeDetectionStrategy.hpp  DetectionStrategy.hpp  IDetectionStrategy.hpp  ObjDetectorNode_node.hpp
src/: ConeDetectionStrategy.cpp  DetectionCatNode.cpp  DetectionCatNode_node.cpp  DetectionStrategy.cpp  ObjDetectorNode.cpp  ObjDetectorNode_node.cpp
tests/: unit.cpp
